# segmentacion_grafos

./: CMakeLists.txt  Edge.h  Grafo.h  Nodo.h  README.md  main.cpp
